--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 
 body{
   /* make all text courier, set margin and padding to 10px */
+  font-family: Courier;
+  margin: 10px;
+  padding: 10px;
 }
 
 h1{
