--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ body{
 
 h1{
   /* make your headers 32px, #128ded color and bold */
-
+  font-size: 32px;
+  color: #128ded;
+  font-weight: bold;
 }
 
 p{
